--- a/api/.env
+++ b/api/.env
@@ -4,5 +4,5 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mongodb+srv://recipes:12345@cluster0.lfdq4tv.mongodb.net/recipes?retryWrites=true&w=majority&appName=Cluster0"
-JWT_SECRET="qwertyuiopasdfghjkl"
+DATABASE_URL=
+JWT_SECRET=
